[project]
name = "llama-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "docarray>=0.41.0",
    "jupyter>=1.1.1",
    "langchain>=0.3.21",
    "langchain-anthropic>=0.3.10",
    "langchain-community>=0.3.20",
    "langchain-ollama>=0.3.0",
    "pydantic>=2.11.1",
    "pypdf>=5.4.0",
    "python-dotenv>=1.1.0",
]
